# qxltools

./: .gitignore  INSTALL  Makefile  Makefile.in  README.QXL  Readme.md  config.h.in  configure  configure.in  qxltool.c  qxltool.h  qxltool.txt
DOS/: Makefile
NT/: fnmatch.c  getopt.c  getopt.h
QDOS/: Makefile  qxltool
Unix/: Makefile  config.cache  config.h  config.status
docs/: qxltool.doxyfile  qxlwin.adoc  qxlwin.html  qxlwin.original.old.html
docs/doxygen/html/: _readme_8md.html  _readme_8md_source.html  annotated.html  annotated_dup.js  classes.html  confdefs_8h.html  confdefs_8h_source.html  files.html  files.js  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  globals_type.html  graph_legend.html  index.html  md__data__source_code_qxltools__readme.html  md__readme.html  menudata.js  navtreedata.js  navtreeindex0.js  pages.html  qxltool_8c.html  qxltool_8c.js  qxltool_8c__incl.md5  qxltool_8c_a0cd373ef29b0b7e44d45e135670461f1_icgraph.md5  qxltool_8c_a36510986cf07803481e211eb18e66fed_cgraph.md5  qxltool_8c_source.html  qxltool_8h.html  qxltool_8h.js  qxltool_8h__dep__incl.md5  qxltool_8h__incl.md5  qxltool_8h_source.html  struct_h_e_a_d_e_r.html  struct_h_e_a_d_e_r.js  struct_j_t_b_l.html  struct_j_t_b_l.js  struct_j_t_b_l__coll__graph.md5  struct_q_l_d_i_r.html  (+9 more)
docs/doxygen/html/search/: all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  (+49 more)
docs/doxygen/latex/: _readme_8md.tex  annotated.tex  confdefs_8h.tex  files.tex  md__readme.tex  qxltool_8c.tex  qxltool_8c__incl.md5  qxltool_8c_a0cd373ef29b0b7e44d45e135670461f1_icgraph.md5  qxltool_8c_a36510986cf07803481e211eb18e66fed_cgraph.md5  qxltool_8h.tex  qxltool_8h__dep__incl.md5  qxltool_8h__incl.md5  refman.tex  struct_h_e_a_d_e_r.tex  struct_j_t_b_l.tex  struct_j_t_b_l__coll__graph.md5  struct_q_l_d_i_r.tex  struct_q_x_l.tex  struct_q_x_l__coll__graph.md5  struct_x_t_c_c.tex  version_8h.tex  version_8h__dep__incl.md5
tools/: QXLMap  QXLMap.c  README.md  StructSizes.c  StructStdInt.c  build_QXLMap.sh
xfer/: lappy  qxlcopy.pl  xfer.txt
