dnl Process this file with autoconf to produce a configure script.
dnl Checks for programs.


AC_INIT(qxltool.c)
AC_CONFIG_HEADER(config.h)

AC_SUBST(PACKAGE)
AC_SUBST(VERSION)
AC_SUBST(PREFIX)

AC_PROG_CC

AC_CHECK_FILE(../qxltool.c,,AC_MSG_ERROR([You must run this in the Unix or NT sub-directory]))
dnl Makdrake libreadline is so fscking stupid ...
dnl AC_ARG_WITH(termcap,[Some braindead distributions require termcap],LIBS="$LIBS -ltermcap")

dnl Checks for libraries.
dnl Replace `main' with a function in -lm:
AC_CHECK_LIB(m, printf)

saved_libs_for_readline=$LIBS
AC_CACHE_CHECK( "for readline", ac_cv_lib_readline,
	[ LIBS="$LIBS -lreadline";
                  AC_TRY_LINK(,[char readline();int main() {readline(); return 0;}],
			ac_cv_lib_readline=-lreadline,
			ac_cv_lib_readline="no")] )
if test "$ac_cv_lib_readline" = "no" ; then
	AC_MSG_CHECKING(a bit harder for readline) 
	LIBS="$LIBS -ltermcap"	
		AC_TRY_LINK(,[char readline();int main() {readline(); return 0;}],
			[ac_cv_lib_readline="-ltermcap -lreadline"],
			ac_cv_lib_readline="no" )
	if test "$ac_cv_lib_readline" = "no"  ; then
		V_READ=no
	else
		V_READ=$ac_cv_lib_readline
		AC_DEFINE(HAVE_LIBREADLINE)
	fi
	AC_MSG_RESULT($V_READ)
else
	AC_DEFINE(HAVE_LIBREADLINE,1,[readline library])
fi

if test "$ac_cv_lib_readline" = "no"  ; then
 	LIBS="$saved_libs_for_readline"
else
	LIBS="$ac_cv_lib_readline $saved_libs_for_readline"
fi


dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(fcntl.h limits.h sys/time.h unistd.h readline/readline.h readline/history.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_INLINE
AC_TYPE_SIZE_T
AC_STRUCT_TM
AC_MINGW32
AC_CYGWIN
AC_C_BIGENDIAN
AC_EXEEXT

AC_CHECK_TYPE(u_char,unsigned char)
AC_CHECK_TYPE(u_short,unsigned short)
AC_CHECK_TYPE(u_long,unsigned long)

dnl Checks for library functions.
AC_FUNC_ALLOCA
AC_FUNC_FNMATCH
AC_FUNC_MEMCMP
AC_TYPE_SIGNAL
AC_FUNC_STRFTIME
AC_CHECK_FUNCS(strdup strspn strtoul stpcpy getopt ftruncate)

AC_OUTPUT(Makefile)
